chore(deps): update lockfile and tsconfig paths for types package
- Added `zod` and `typescript` dependencies to `packages/types`
- Updated `@types/node` to v22.15.30
- Added `@undici/types` v6.21.0
- Updated `tsconfig.base.json` paths to include `@moduli/types/*`

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,7 @@
     "noEmit": true,
     "paths": {
       "@moduli/types": ["./packages/types/src/index.ts"],
+      "@moduli/types/*": ["./packages/types/src/*"],
       "@moduli/graph": ["./packages/graph/src/index.ts"],
       "@moduli/ui": ["./packages/ui/src/index.ts"],
       "@moduli/content": ["./packages/content/src/index.ts"],
