cleanup: remove Rive, establish gradient background
- Removed all Rive dependencies and files
- Implemented lightweight CSS gradient background
- Cleaned up test files and unused components
- Ready to focus on core functionality

--- a/apps/web-foundation/package.json
+++ b/apps/web-foundation/package.json
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@moduli/core": "workspace:*",
-    "@rive-app/canvas": "^2.21.0"
+    "@moduli/core": "workspace:*"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
