--- a/apps/web-foundation/tsconfig.json
+++ b/apps/web-foundation/tsconfig.json
@@ -9,6 +9,6 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "moduleResolution": "bundler"  // <-- Legg til denne
+    "moduleResolution": "bundler"
   }
 }
