--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "@moduli/core",
+  "name": "@moduli/content",
   "version": "0.1.0",
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     },
-    "./server": {
-      "types": "./dist/server.d.ts",
-      "import": "./dist/server.js"
-    }
+    "./konsepter/*": "./src/konsepter/*"
   },
   "scripts": {
-    "dev": "tsc --watch",
     "build": "tsc",
-    "clean": "rm -rf dist"
+    "dev": "tsc --watch"
   },
   "dependencies": {
     "gray-matter": "^4.0.3"
